--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
     "eslint": "^3.14.0",
     "express": "^4.14.0",
     "mocha": "^3.2.0",
+    "mongodb": "^2.2.22",
     "should": "^11.1.2",
     "supertest": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^3.14.0",
     "eslint-config-airbnb-base": "^11.0.1",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-import": "^2.2.0",
+    "nodemon": "^1.11.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "nodemon": "nodemon index.js"
   },
   "repository": {
     "type": "git",
