--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.14.0",
     "mocha": "^3.2.0",
     "mongodb": "^2.2.22",
+    "mongoose": "^4.8.0",
     "should": "^11.1.2",
     "supertest": "^2.0.1"
   },
