--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
     "mongodb": "^2.2.22",
     "mongoose": "^4.8.0",
     "should": "^11.1.2",
-    "supertest": "^2.0.1"
+    "supertest": "^2.0.1",
+    "bcryptjs": "*",
+    "connect-flash": "*",
+    "cookie-parser": "^1.4.1",
+    "express-handlebars": "*",
+    "express-messages": "*",
+    "express-session": "*",
+    "express-validator": "*",
+    "passport": "*",
+    "passport-http": "*",
+    "passport-local": "*"
   },
   "devDependencies": {
     "eslint": "^3.14.0",
