--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "nodemon": "^1.11.0"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "nodemon": "nodemon index.js"
   },
   "repository": {
