--- a/package.json
+++ b/package.json
@@ -4,24 +4,26 @@
   "description": "Music platform that allows producers to share, receive feedback and promote their song.",
   "main": "index.js",
   "dependencies": {
-    "body-parser": "^1.16.0",
-    "eslint": "^3.14.0",
-    "express": "^4.14.0",
-    "mocha": "^3.2.0",
-    "mongodb": "^2.2.22",
-    "mongoose": "^4.8.0",
-    "should": "^11.1.2",
-    "supertest": "^2.0.1",
     "bcryptjs": "*",
+    "body-parser": "^1.16.0",
     "connect-flash": "*",
     "cookie-parser": "^1.4.1",
+    "eslint": "^3.14.0",
+    "express": "^4.14.0",
     "express-handlebars": "*",
     "express-messages": "*",
     "express-session": "*",
     "express-validator": "*",
+    "gridfs-stream": "^1.1.1",
+    "mocha": "^3.2.0",
+    "mongodb": "^2.2.22",
+    "mongoose": "^4.8.0",
+    "multer": "^1.3.0",
     "passport": "*",
     "passport-http": "*",
-    "passport-local": "*"
+    "passport-local": "*",
+    "should": "^11.1.2",
+    "supertest": "^2.0.1"
   },
   "devDependencies": {
     "eslint": "^3.14.0",
